# ferrobean

./: .gitignore  Cargo.toml  README.md  book.toml  justfile  wrangler.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: README.md  SUMMARY.md  api-reference.md  contributing.md  deployment.md  development.md  getting-started.md  introduction.md  project-structure.md
src/: lib.rs
src/beans/: abc.rs  flags.rs  mod.rs
src/core/: accounts.rs  attributes.rs  ledger.rs  mod.rs
src/util/: date.rs  mod.rs  ranking.rs
