[package]
name = "ferrobean"
version = "0.1.0"
edition = "2024"
authors = ["copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
time = "0.3.44"
worker = { version = "0.6" }
worker-macros = { version = "0.6" }
